# kurotto

./: CMakeLists.txt  Install.txt  README.md  Readme.txt  exemple1.txt  exemple10.txt  exemple2.txt  exemple4.txt  exemple7.txt  formule.cpp  formule.hpp  grille.cpp  grille.hpp  grillewrapper.cc  grillewrapper.cpp  main.cpp  makefile
nsatTo3sat/: Cargo.toml  Install.txt  ex.cnf  ex2.cnf
nsatTo3sat/src/: main.rs
python/: formule.py  grille.py
