if(NOT CMAKE_BUILD_TYPE)
  set(CMAKE_BUILD_TYPE Release)
endif()
project(Kurotto)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_FLAGS_RELEASE "-O3")
set(CMAKE_CXX_FLAGS "-pthread")
set(CMAKE_CXX_STANDARD_REQUIRED True)
add_executable(Kurotto main.cpp grille.cpp formule.cpp)
target_link_libraries(Kurotto PUBLIC sfml-window sfml-window sfml-graphics pthread sfml-system)
